random restaurant button working

--- a/about.html
+++ b/about.html
@@ -40,9 +40,11 @@
 			</li>
 			<br>
 		</ul>
-		
+		<button id="random">Random Restaurant</button>
+		<br>
+		<a id="test" href="#"></a>
 	</content>
 
 </body>
-<script src="about.js"></script>
+<script src="new.js"></script>
 </html>
